--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
 <div class="signup-container">
-  <h2>Sign Up Page</h2>
+  <h2>Sign Up </h2>
   <form>
     <input type="text" placeholder="Username" required>
     <input type="password" placeholder="Password" required>
